# InventorySystem

./: CMakeCache.txt  CMakeLists.txt  README.md  User.sql  UserTriggers.sql  book.sql  bookretrieval.py  cleaned_books1.csv  login.html  main.cpp  script.py  user.cpp
book_csvs/: cleanedForSQL.csv  goodreads_with_genres.csv  test.csv
css_folder/: project.css
html_pages/: login.html  main.html  registration.html  test.html
html_samples/: account_security_settings.html  activity_logs.html  add_new_book.html  admin_CSV_dragndrop.html  admin_dashboard.html  barcode_scanner.html  book_available_alert.html  book_details.html  book_details_bot.html  book_reservation.html  chatbot.html  check_in.html  check_out.html  data_visualization_dashboard.html  delete_book.html  device_setup.html  discussion_forum.html  due_date_reminder.html  edit_book_information.html  edit_user_role.html  forgot_password.html  genre_preferences.html  group_forum_homepage.html  librarian_stock_alert.html  library_database.html  library_database_management.html  library_homepage.html  login.html  my_borrowed_books.html  notifications_dashboard.html  reading_challenge.html  recommendations.html  reset_password.html  return_books.html  search_results.html  sign-up.html  stock_update.html  user_book_reviews.html  user_library_interaction.html  user_management.html  (+3 more)
html_samples/error_pages/: 403.html  404.html  500.html  503.html
phc-winner-argon2/: Makefile
python scripts/: bookretrieval.py  cleanCSV.py  csvtocsv.py
pythonScripts/: barcodeGen.py  cleanCSV.py  csvToBooks.py  csvToTable.py  genregetter.py  getGenreYear.py  googleApiJsonRetrieval.py  plotGenerator.py  talpaAPIJSONGrabber.py
sql tables/: Restrictions.sql  User.sql  UserGenres.sql  book.sql  discussion.sql
src/: admin.cpp  admin.h  books.cpp  books.h  main.cpp  user.cpp  user.h
uploads/: uploaded_file.csv
